mule-user-guide/v/3.2/xslt-transformer-reference.adoc
image:Transformer-48x32.png[Transformer-48x32]

= XSLT Transformer Reference

 +
*Purpose:* Use a XSLT Transformer to transform XML data using XSLT.

*Minimum Configuration:* None required.

*Discussion:* A XSLT transformer, unless configured otherwise, transforms XML data based on the default XSL template file.

Use the General tab to specify the XSL transformation code. 
+
image:xslt1.png[xslt1] +
+

From the General tab, you can specify a different XSL template file. You can browse to this file or enter the full path to the file. Rather than specifying a XSL file, you can type in the XSL content directly in the XSLT Content box. Either way that you specify the XSLT, you can also select the Output Encoding, such as the ISO Unicode or language formats, for the content output from the XML.

Use the Advanced tab to optionally configure additional properties. 
+
image:xslt2.png[xslt2] +
+

In addition to encoding options, you can specify the URI resolver. You specify the URI resolver to use if you want to change how the XSL output is validated. If not set, Mule uses a default resolver that checks for resources on the local file system and classpath.

You can also optionally set a Transformer Factory. If set, this is the fully qualified class name of the `javax.xml.TransformerFactory` instance to use. If not specified, Mule uses the default JDK factory `TransformerFactory.newInstance()`.

You can also set Max Idle and Max Active values for the transformers pool. Because XSL transformation is expensive, and because Mule pools transformers for better throughput, you may want to set limits on the transformer pool when using XSLT transformers. Use Max Idle to set the maximum number of transformer instances that remain idle in the pool. Use Max Active to set the maximum number of XSLT transformers that are pooled at any given time. The default value for Max Idle is 2 and the default value for Max Active is 5.

== Mule ESB Reference

For more information, see link:/mule-user-guide/v/3.2/xslt-transformer[here].
